# Pump-Troubleshooter

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile.txt  LICENSE.txt  README.md  SETUP.md
backup/: CMakeLists.txt  CMakeLists.txt.shared
lib/: CMakeLists.txt
lib/pump_thread/: CMakeLists.txt  pump_thread.cpp  pump_thread.h
src/: CMakeLists.txt  main.cpp
src/ui/: CMakeLists.txt  main_window.cpp  main_window.h  main_window.ui  resources.qrc  serial_dialog.cpp  serial_dialog.h  serial_dialog.ui
